CHANGES.txt for Tux Paint

Tux Paint - A simple drawing program for children.

Copyright (c) 2004 by Bill Kendrick
bill@newbreedsoftware.com
http://www.newbreedsoftware.com/tuxpaint/


2004.November.24 (0.9.15)
  * Let's try the new tinter code. Be sure to get the new *.dat files
    to ensure that greyscale stamps (ugh) get tinted, and that a few
    wide-hue stamps (marigold, truck) get fully tinted.
    Albert Cahalan <albert@users.sf.net>

  * Moved tinter code into own function.
    Albert Cahalan <albert@users.sf.net>

  * Added "scale" keyword (*.dat files) for high-resolution stamp images.
    Fixed it later; had ":" and "/" flipped around. Documented it.
    Albert Cahalan <albert@users.sf.net>

  * Can now use pretty much any window size, like 1234x666.
    Albert Cahalan <albert@users.sf.net>

  * abstracted stamp scaling (prep for large sizes)
    Per-stamp sane scaling range enforced. (generally bigger)
    Albert Cahalan <albert@users.sf.net>

  * simplify strip_trailing_whitespace, now O(n)
    Albert Cahalan <albert@users.sf.net>

  * drawtext_callback prototype forces useless arg. void it
    Albert Cahalan <albert@users.sf.net>

  * Enabled more compiler warnings, and updated code to prevent them.
    Albert Cahalan <albert@users.sf.net>
    Bill Kendrick <bill@newbreedsoftware.com>

  * Updated Hebrew translation.
    Dovix <dovix2003@yahoo.com>

  * Increased maximum number of stamps that can be loaded at once from
    256 to 512.
    Albert Cahalan <albert@users.sourceforge.net>

  * Switched from using 16bpp display surfaces to 15bpp, to reduce
    discoloration. ("#define" options exist at the top of src/tuxpaint.c
    to choose which you want.)
    Albert Cahalan <albert@users.sourceforge.net>

  * Now uses "AUDIO_S16SYS" when initializing audio system (on Linux/Mac/BeOS)
    Albert Cahalan <albert@users.sourceforge.net>
  
  * Improved compiler warnings (CLFAGS in Makefile)
    Albert Cahalan <albert@users.sourceforge.net>
