@@ -8,6 +8,12 @@ http://www.newbreedsoftware.com/tuxpaint/
 
 
 2004.November.24 (0.9.15)
+  * Stamp outline fixes: handle stamps that go all the way to the edge of
+    the image file (example: ones w/o alpha), use a stiple pattern that
+    doesn't have empty rows or columns (causes blankouts and jumping),
+    thicker line, line symetric about the boundry
+    Albert Cahalan <albert@users.sf.net>
+
   * Let's try the new tinter code. Be sure to get the new *.dat files
     to ensure that greyscale stamps (ugh) get tinted, and that a few
     wide-hue stamps (marigold, truck) get fully tinted.
